--- a/package.json
+++ b/package.json
@@ -12,34 +12,36 @@
     "gen": "plop"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "git-cz": "^4.9.0",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.509.0",
     "plop": "^4.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-number-format": "^5.4.2",
-    "react-router-dom": "^6.22.3",
-    "react-toastify": "^11.0.2",
-    "zustand": "^4.5.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
+    "react-number-format": "^5.4.4",
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "typescript": "~5.6.2",
+    "@eslint/js": "^9.26.0",
+    "@tailwindcss/vite": "^4.1.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.18.2",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "vite": "^6.0.5"
   },
   "config": {
